--- a/client/iOS/Resources/iplogin/index.html
+++ b/client/iOS/Resources/iplogin/index.html
@@ -37,8 +37,10 @@
                             <div class="row rowmarnone">
                                 <section class="col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10 select-box">
                                    <select class="cs-select cs-skin-underline iplist">
-                                        <option value="1" selected data-ipaddress='121.49.107.4:8443'>实验室</option>
-                                        <option value="2" data-ipaddress='222.186.209.130:55555'>镇江</option> 
+                                        <option value="1" selected data-ipaddress='121.49.107.4:55561'>外网实验室</option>
+                                        <option value="3" data-ipaddress='222.186.209.130:55555'>镇江</option>
+                                        <option value="2" selected data-ipaddress='172.20.100.11'>实验室11</option>
+                                        <option value="2" selected data-ipaddress='172.20.156.110'>实验室110</option>
                                     </select>
                                 </section>
                             </div>
