解析打开应用时接收的arguments参数信息

--- a/client/iOS/Resources/iplogin/index.html
+++ b/client/iOS/Resources/iplogin/index.html
@@ -37,8 +37,12 @@
                                 <div class="row rowmarnone">
                                     <section class="col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10 select-box">
                                         <select class="cs-select cs-skin-underline iplist">
-                                            <option value="1" selected data-ipaddress='121.49.107.4:8443'>实验室</option>
-                                            <option value="2" data-ipaddress='222.186.209.130:55555'>镇江</option>
+                                            <option value="1" data-ipaddress='172.20.156.177'>测试2</option>
+                                            <option value="2" selected data-ipaddress='121.49.107.4:55577'>实验室77</option>
+                                            <option value="3" data-ipaddress='222.186.209.130:55555'>镇江</option>
+                                            <option value="4" data-ipaddress='172.20.156.110'>测试1</option>
+                                            <option value="5" data-ipaddress='172.20.156.177'>测试2</option>
+                                            <option value="6" selected data-ipaddress='121.49.107.4:8443'>实验室8443</option>
                                             <!-- <option value="2" data-ipaddress='172.20.156.110'>110</option>  -->
                                         </select>
                                     </section>
