--- a/client/iOS/Resources/iplogin/index.html
+++ b/client/iOS/Resources/iplogin/index.html
@@ -1,51 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ip配置</title>
-    <script type="text/javascript" src="./static/js/jquery.min.js"></script>
-    <link rel="stylesheet" href="./static/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="./static/css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="./static/css/iconfont.css">
-    <link rel="stylesheet" type="text/css" href="./static/css/cs-select.css" />
-    <link rel="stylesheet" type="text/css" href="./static/css/cs-skin-underline.css" />
-    <link rel="stylesheet" type="text/css" href="./static/css/index.css" />
-    <link rel="stylesheet" type="text/css" href="./static/css/animate.css" />
-    <link rel="stylesheet" type="text/css" href="./static/css/login.css" />
-    <script type="text/javascript" src="./static/js/jquery.min.js"></script>
-</head>
-<body>
-    <div class="container-fluid">
-        <div id="Windowsexit" class="pull-right"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></div>
-        <div class="row">
-            <div class="col-lg-4 col-lg-offset-4  col-md-6 col-md-offset-3 col-sm-offset-2 col-sm-8 col-xs-12  y-wrap">
-                <div class="row changebox">
-                    <div class='ant-spin ant-spin-spinning y-hide'>
-                        <span class='ant-spin-dot ant-spin-dot-spin'><i></i><i></i><i></i><i></i></span>
-                    </div>
-                    <div class="y-head-icon">
-                        <span class="iconfont icon-yunjisuan"></span>
-                    </div>
-                    <div class="insertbox">
+    <head>
+        <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+                <meta http-equiv="X-UA-Compatible" content="ie=edge">
+                    <title>ip配置</title>
+                    <script type="text/javascript" src="./static/js/jquery.min.js"></script>
+                    <link rel="stylesheet" href="./static/css/bootstrap.min.css">
+                        <link rel="stylesheet" type="text/css" href="./static/css/normalize.css" />
+                        <link rel="stylesheet" type="text/css" href="./static/css/iconfont.css">
+                            <link rel="stylesheet" type="text/css" href="./static/css/cs-select.css" />
+                            <link rel="stylesheet" type="text/css" href="./static/css/cs-skin-underline.css" />
+                            <link rel="stylesheet" type="text/css" href="./static/css/index.css" />
+                            <link rel="stylesheet" type="text/css" href="./static/css/animate.css" />
+                            <link rel="stylesheet" type="text/css" href="./static/css/login.css" />
+                            <script type="text/javascript" src="./static/js/jquery.min.js"></script>
+    </head>
+    <body>
+        <div class="container-fluid">
+            <div id="Windowsexit" class="pull-right"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></div>
+            <div class="row">
+                <div class="col-lg-4 col-lg-offset-4  col-md-6 col-md-offset-3 col-sm-offset-2 col-sm-8 col-xs-12  y-wrap">
+                    <div class="row changebox">
+                        <div class='ant-spin ant-spin-spinning y-hide'>
+                            <span class='ant-spin-dot ant-spin-dot-spin'><i></i><i></i><i></i><i></i></span>
+                        </div>
+                        <div class="y-head-icon">
+                            <span class="iconfont icon-yunjisuan"></span>
+                        </div>
+                        <div class="insertbox">
                             <div class="col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10 loginbox">
                                 <div class="y-box-wrap">
                                     <input type="text" class="form-control" id="username" placeholder="用户名">
-                                </div>
+                                        </div>
                                 <div class="y-box-wrap">
                                     <input type="password" class="form-control" id="password" placeholder="密码">
-                                </div>
+                                        </div>
                                 <div class="y-box-wrap">
                                     <button class="btn col-xs-12 btn-primary" id="login">登录</button>
                                 </div>
                                 <div class="y-box-wrap">
                                     <div class="linkbox">
                                         <label class="ant-checkbox-wrapper">
-                            <span class="ant-checkbox">
-                                <input type="checkbox" class="ant-checkbox-input" value="">
-                                <span class="ant-checkbox-inner"></span>
-                            </span>
+                                            <span class="ant-checkbox">
+                                                <input type="checkbox" class="ant-checkbox-input" value="">
+                                                    <span class="ant-checkbox-inner"></span>
+                                                    </span>
                                             <span class="y-link">自动登录 |</span>
                                         </label>
                                         <span class="y-link regist"><a href="#">注册</a> |</span>
@@ -54,121 +54,121 @@
                                     </div>
                                 </div>
                             </div>
-                    </div>
-                </div>
-                <div class="ipwrap">
-                    <div class="row">
-                        <div class="configicon">
-                                <span class="iconfont icon-setting" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample"></span>
                         </div>
                     </div>
-                    <div class="collapse" id="collapseExample">
-                        <div class="ipconbox">
-                            <div class="row rowmarnone">
-                                <section class="col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10 select-box">
-                                   <select class="cs-select cs-skin-underline iplist">
-                                       <option value="1" selected data-ipaddress='222.186.209.130:55590'>实验室开发</option>
-                                        <option value="1" selected data-ipaddress='222.186.209.130:55596'>实验室测试</option>
-                                       <option value="1" selected data-ipaddress='222.186.209.130:55561'>实验室演示</option>
-                                       <option value="2" data-ipaddress='222.186.209.130:55555'>镇江演示</option>
-                                    </select>
-                                </section>
+                    <div class="ipwrap">
+                        <div class="row">
+                            <div class="configicon">
+                                <span class="iconfont icon-setting" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample"></span>
+                            </div>
+                        </div>
+                        <div class="collapse" id="collapseExample">
+                            <div class="ipconbox">
+                                <div class="row rowmarnone">
+                                    <section class="col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10 select-box">
+                                        <select class="cs-select cs-skin-underline iplist">
+                                            <option value="1" selected data-ipaddress='121.49.107.4:55590'>实验室开发</option>
+                                            <option value="2" data-ipaddress='121.49.107.4:55596'>实验室测试</option>
+                                            <option value="3"  data-ipaddress='121.49.107.4:55561'>实验室演示</option>
+                                            <option value="4" data-ipaddress='222.186.209.130:55555'>镇江演示</option>
+                                        </select>
+                                    </section>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-       </div>
-    </div>
-    <!--<div class="mask"></div>-->
-    <div class="maskloading y-hide">
-        <div class='ant-spin ant-spin-spinning'>
-            <span class='ant-spin-dot ant-spin-dot-spin'><i></i><i></i><i></i><i></i></span>
         </div>
-    </div>
-</body>
-<style>
-@media (min-height:  500px) {
-    .changebox{
-        /* height: 20rem; */
-        /* text-align: center; */
-        margin-top: 20%;
+        <!--<div class="mask"></div>-->
+        <div class="maskloading y-hide">
+            <div class='ant-spin ant-spin-spinning'>
+                <span class='ant-spin-dot ant-spin-dot-spin'><i></i><i></i><i></i><i></i></span>
+            </div>
+        </div>
+    </body>
+    <style>
+        @media (min-height:  500px) {
+            .changebox{
+                /* height: 20rem; */
+                /* text-align: center; */
+                margin-top: 20%;
+            }
+        }
+    .configicon{
+        font-size: 2rem;
+        display: block;
+        text-align: center;
     }
-}
-.configicon{
-    font-size: 2rem;
-    display: block;
-    text-align: center;
-}
-.configicon .iconfont{
-    font-size: 2rem;
-}
-.loginiframe{
-    margin-top: 5rem;
-}
-.ipconbox{
-    position: relative;
-    height: 20rem;
-}
-.ipconboxmask{
-    height: 100%;
-    background-color: #fff;
-    opacity: 0.7;
-}
-.cs-select{
-    color: #fff;
-}
-.select-box{
-    margin-top: 2rem;
-}
-.insertbox{
-    /*opacity: 0;*/
-    display: none;
-}
-.y-btn-wrap{
-    /* margin: 0; */
-    padding: 0;
-    margin-top: 1rem;
-
-}
-#Windowsexit:hover {
-    position: relative;
-    right: 0;
-    z-index: 1000;
-    display: none;
-    width: 20px;
-    height: 20px;
-    border-radius: 10px;
-    text-align: center;
-    border: 1px solid #fff;
-    color: #fff;
-}
-#Windowsexit {
-    position: relative;
-    right: 0;
-    z-index: 1000;
-    display: none;
-    width: 20px;
-    height: 20px;
-    border-radius: 10px;
-    text-align: center;
-    border: 1px solid #9E9E9E;
-    color: #9E9E9E;
-}
-.loginbox{
-    padding: 0;
-}
-</style>
-<script src="./static/js/qwebchannel.js"></script>
-<script src="./static/js/classie.js"></script>
-<script src="./static/js/selectFx.js"></script>
-<script src="./static/js/index.js"></script>
-<script src="./static/js/rsa.js"></script>
-<script src="./static/js/common.js"></script>
-<script type="text/javascript" src="./static/js/bootstrap.min.js"></script>
-<script >
-     $(".configicon").click(function(){
-     })
-</script>
+    .configicon .iconfont{
+        font-size: 2rem;
+    }
+    .loginiframe{
+        margin-top: 5rem;
+    }
+    .ipconbox{
+        position: relative;
+        height: 20rem;
+    }
+    .ipconboxmask{
+        height: 100%;
+        background-color: #fff;
+        opacity: 0.7;
+    }
+    .cs-select{
+        color: #fff;
+    }
+    .select-box{
+        margin-top: 2rem;
+    }
+    .insertbox{
+        /*opacity: 0;*/
+        display: none;
+    }
+    .y-btn-wrap{
+        /* margin: 0; */
+        padding: 0;
+        margin-top: 1rem;
+        
+    }
+    #Windowsexit:hover {
+        position: relative;
+        right: 0;
+        z-index: 1000;
+        display: none;
+        width: 20px;
+        height: 20px;
+        border-radius: 10px;
+        text-align: center;
+        border: 1px solid #fff;
+        color: #fff;
+    }
+    #Windowsexit {
+        position: relative;
+        right: 0;
+        z-index: 1000;
+        display: none;
+        width: 20px;
+        height: 20px;
+        border-radius: 10px;
+        text-align: center;
+        border: 1px solid #9E9E9E;
+        color: #9E9E9E;
+    }
+    .loginbox{
+        padding: 0;
+    }
+    </style>
+    <script src="./static/js/qwebchannel.js"></script>
+    <script src="./static/js/classie.js"></script>
+    <script src="./static/js/selectFx.js"></script>
+    <script src="./static/js/index.js"></script>
+    <script src="./static/js/rsa.js"></script>
+    <script src="./static/js/common.js"></script>
+    <script type="text/javascript" src="./static/js/bootstrap.min.js"></script>
+    <script >
+        $(".configicon").click(function(){
+                               })
+        </script>
 </html>
