增加了一个测试环境

--- a/client/iOS/Resources/iplogin/index.html
+++ b/client/iOS/Resources/iplogin/index.html
@@ -68,7 +68,7 @@
                                     <section class="col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10 select-box">
                                         <select class="cs-select cs-skin-underline iplist">
                                             <option value="1" selected data-ipaddress='121.48.165.22:55580'>实验室开发</option>
-<!--                                            <option value="2"  data-ipaddress='121.48.165.22:55507'>实验室演示</option>-->
+                                            <option value="2"  data-ipaddress='172.20.156.202'>实验室测试</option>
                                         </select>
                                     </section>
                                 </div>
